--- a/app/src/release/res/values/google_maps_api.xml
+++ b/app/src/release/res/values/google_maps_api.xml
@@ -16,6 +16,8 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD42wIm26Lxcfiv13wcvyAp9zlnTbqHsFI</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+        AIzaSyD42wIm26Lxcfiv13wcvyAp9zlnTbqHsFI
+    </string>
 
 </resources>
