--- a/app/src/main/res/layout/content_example2.xml
+++ b/app/src/main/res/layout/content_example2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="elmdroid.elmdroid.example2.Example2"
+    tools:context="elmdroid.elmdroid.example2.DrawerExample"
     tools:showIn="@layout/app_bar_example2">
 
 </android.support.constraint.ConstraintLayout>
