--- a/app/src/main/res/layout/fragment_main_activity_example4.xml
+++ b/app/src/main/res/layout/fragment_main_activity_example4.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="elmdroid.elmdroid.example4.MainActivityExample4$PlaceholderFragment">
+    tools:context="elmdroid.elmdroid.example4.PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
