--- a/app/src/main/res/layout/content_main_activity_example2_orig.xml
+++ b/app/src/main/res/layout/content_main_activity_example2_orig.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="elmdroid.elmdroid.example2orig.MainActivityExample2Orig"
+    tools:context="elmdroid.elmdroid.example2orig.Example2OrigDrawer"
     tools:showIn="@layout/app_bar_main_activity_example2_orig">
 
 </android.support.constraint.ConstraintLayout>
