--- a/app/src/main/res/layout/app_bar_show_case.xml
+++ b/app/src/main/res/layout/app_bar_show_case.xml
@@ -30,4 +30,9 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <us.feras.mdv.MarkdownView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/markdownView" />
+
 </android.support.design.widget.CoordinatorLayout>
