--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="elmdroid.elmdroid.example2.DrawerExample"
-    tools:showIn="@layout/app_bar_example2">
+    tools:showIn="@layout/app_bar_drawer">
 
 </android.support.constraint.ConstraintLayout>
