--- a/app/src/main/res/layout/nav_activity_drawer.xml
+++ b/app/src/main/res/layout/nav_activity_drawer.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_example2"
+        layout="@layout/app_bar_drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_example2"
+        app:headerLayout="@layout/nav_header_drawer"
         app:menu="@menu/nav_activity_example2_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
