Add twitter link

--- a/app/src/main/res/layout/nav_header_showcase.xml
+++ b/app/src/main/res/layout/nav_header_showcase.xml
@@ -23,13 +23,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Saffi Hartal"
+        android:text="@string/my_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="saffi.h@gmail.com" />
+        android:text="@string/twitter_account" />
 
 </LinearLayout>
