--- a/app/src/main/res/layout/activity_main_example4.xml
+++ b/app/src/main/res/layout/activity_main_example4.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="elmdroid.elmdroid.example4.Example4Tabbed">
+    tools:context="elmdroid.elmdroid.example4.TabbedActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
