--- a/app/src/main/res/menu/nav_activity_example2_drawer.xml
+++ b/app/src/main/res/menu/nav_activity_example2_drawer.xml
@@ -27,7 +27,7 @@
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
             <item
-                android:id="@+id/nav_mapsorig"
+                android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Send" />
         </menu>
