--- a/app/src/main/res/menu/activity_showcase_drawer.xml
+++ b/app/src/main/res/menu/activity_showcase_drawer.xml
@@ -23,9 +23,13 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_maps"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Maps" />
+                android:id="@+id/nav_maps_service"
+                android:icon="@drawable/ic_menu_map"
+                android:title="Maps with service" />
+            <item
+                android:id="@+id/nav_maps_local_service"
+                android:icon="@drawable/ic_menu_compass"
+                android:title="Maps with local service" />
             <item
                 android:id="@+id/nav_mapsorig"
                 android:icon="@drawable/ic_menu_send"
